RESOLVED FIXED 48568
Backgrounds on vertical inlines don't paint properly.
https://bugs.webkit.org/show_bug.cgi?id=48568
Summary Backgrounds on vertical inlines don't paint properly.
Dave Hyatt
Reported 2010-10-28 14:55:40 PDT
Backgrounds on vertical inlines don't paint properly. The strip needs to be a vertical one rather than horizontal.
Attachments
Patch (111.27 KB, patch)
2010-10-28 14:57 PDT, Dave Hyatt
jamesr: review+
Dave Hyatt
Comment 1 2010-10-28 14:57:29 PDT
James Robinson
Comment 2 2010-10-28 15:11:16 PDT
Comment on attachment 72239 [details] Patch R=me
Dave Hyatt
Comment 3 2010-10-28 15:12:43 PDT
Fixed in r70816.
Note You need to log in before you can comment on or make changes to this bug.