https://bugs.webkit.org/show_bug.cgi?id=48568

Reviewed by James Robinson.

WebCore:

Backgrounds don't work right with vertical RenderInlines. Make background painting
do the right thing for vertical strips.

Added fast/blockflow/background-* tests

* rendering/InlineFlowBox.cpp:
(WebCore::InlineFlowBox::paintFillLayer):

LayoutTests:

Backgrounds don't work right with vertical RenderInlines. Make background painting
do the right thing for vertical strips.

* fast/blockflow/background-horizontal-bt.html: Added.
* fast/blockflow/background-vertical-lr.html: Added.
* fast/blockflow/background-vertical-rl.html: Added.
* platform/mac/fast/blockflow/background-horizontal-bt-expected.checksum: Added.
* platform/mac/fast/blockflow/background-horizontal-bt-expected.png: Added.
* platform/mac/fast/blockflow/background-horizontal-bt-expected.txt: Added.
* platform/mac/fast/blockflow/background-vertical-lr-expected.checksum: Added.
* platform/mac/fast/blockflow/background-vertical-lr-expected.png: Added.
* platform/mac/fast/blockflow/background-vertical-lr-expected.txt: Added.
* platform/mac/fast/blockflow/background-vertical-rl-expected.checksum: Added.
* platform/mac/fast/blockflow/background-vertical-rl-expected.png: Added.
* platform/mac/fast/blockflow/background-vertical-rl-expected.txt: Added.



Canonical link: https://commits.webkit.org/61328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70816 268f45cc-cd09-0410-ab3c-d52691b4dbfc